# laplace-fmm

./: CMakeLists.txt  README.md
src/: multipole.cpp  multipole.h  Новый текстовый документ.txt
src/common/: avx.h  cuda_utils.h  defs.h  mpi_utils.h  simple_math.cu  simple_math.h  special_functions.cpp  special_functions.cu  special_functions.h  utils.h
src/cpu/: morton_tree.cpp  morton_tree.h  multipole.cpp  multipole.h  multipole3d.cpp  multipole3d.h
src/cuda/: morton_tree.cu  morton_tree.h  multipole.cu  multipole.h  multipole3d.cu  multipole3d.h
src/examples/: capacitance.cpp  main.cpp
